Wed Mar  3 22:18:13 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/CommandProps.pm: Add 'days_since_subscribe' and 'mime' to
 	allowed variables for 'post'.

	* lib/Mj/Resend.pm (_check_poster): New function, do checks based
 	on the person posting the message.  Currently check the number of
 	days since they joined.

1999-03-01  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* files/INDEX.pl: Renamed quote_regexp to quote_pattern.

Mon Mar  1 07:37:52 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* bin/mj_email (forward_to_owner, resend): Allow possible \r when
 	stripping From_ separators.

Sun Feb 28 00:04:02 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/mj_cf_data.pl: Remove all comment entries.

	* files/INDEX.pl: Added all of the variable descriptions.

Sat Feb 27 14:44:15 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (config_get_comment): Extract the file from the
 	filespace instead of of getting it from the big variable data
 	structure.  Variable descriptions are now translatable.

	* lib/mj_cf_data.pl: Rename 'quote_regexp' to 'quote_pattern'.

	* lib/Mj/Resend.pm (_check_body): Use quote_pattern.

	* setup/setup_func.pl (suggest_crontab): Doesn't need a domain any
 	longer.

	* installbin: Expand @::DOMAINS in mj_trigger to list of all
 	configured domains.

	* bin/mj_trigger: If not passed -d, loop over all configured
 	domains instead.

	* lib/Mj/Resend.pm (post, _post): Fix typos; site -> site_name.

Fri Feb 26 17:38:38 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (welcome): $MJ instead of $MAJORDOMO.

	* lib/mj_cf_data.pl: Tweak 'welcome_files' description.

	* files/en/help/help: Mention "unregister".  Use $MJ instead of
 	$WHOAMI and $MJOWNER instead of $OWNER.

	* lib/Mj/List.pm: Add 'nohide' meaning the same thing as showall.

	* lib/Mj/Resend.pm (post): Add some new substitutions in acks.